--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
   <!-- Page Title -->
-  <title>Title</title>
+  <title>Switch-Html-Template</title>
   <!-- Favicon and Apple Touch Icons -->
   <link rel="icon" href="img/favicon.ico">
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/linea-icon.css">
-  <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
   <!-- Modernizr -->
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
@@ -26,8 +24,8 @@
     
   
   <!-- Scripts -->
-  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 </body>
