--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-<head>
-  <!-- Meta Tags -->
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="Pressionate">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <!-- Page Title -->
-  <title>Switch-Html-Template</title>
-  <!-- Favicon and Apple Touch Icons -->
-  <link rel="icon" href="img/favicon.ico">
-  <!-- Stylesheets -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <!-- Modernizr -->
-  <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-</head>
+    <head>
+        <!-- Meta Tags -->
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="author" content="Monir">
+        <meta name="description" content="">
+        <meta name="keywords" content="">
+        <!-- Page Title -->
+        <title>Switch-Html-Template</title>
+        <!-- Favicon and Apple Touch Icons -->
+        <link rel="icon" href="img/favicon.ico">
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="css/bootstrap-3.3.7.min.css">
+        <link rel="stylesheet" href="css/font-awesome-4.7.0.min.css">
+        <link rel="stylesheet" href="css/style.css">
+        <!-- Modernizr -->
+        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    </head>
 
-<body>
-    
-  
-  <!-- Scripts -->
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-</body>
+    <body>
+        <header class="header-area">
+            .main
+        </header>
+        <!-- Scripts -->
+        <script src="js/vendor/jquery-3.2.1.min.js"></script>
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
+    </body>
 </html>
