--- a/index.html
+++ b/index.html
@@ -1,32 +1,85 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-    <head>
-        <!-- Meta Tags -->
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="Monir">
-        <meta name="description" content="">
-        <meta name="keywords" content="">
-        <!-- Page Title -->
-        <title>Switch-Html-Template</title>
-        <!-- Favicon and Apple Touch Icons -->
-        <link rel="icon" href="img/favicon.ico">
-        <!-- Stylesheets -->
-        <link rel="stylesheet" href="css/bootstrap-3.3.7.min.css">
-        <link rel="stylesheet" href="css/font-awesome-4.7.0.min.css">
-        <link rel="stylesheet" href="css/style.css">
-        <!-- Modernizr -->
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
 
-    <body>
-        <header class="header-area">
-            .main
-        </header>
-        <!-- Scripts -->
-        <script src="js/vendor/jquery-3.2.1.min.js"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-    </body>
+<head>
+    <!-- Meta Tags -->
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Monir">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <!-- Page Title -->
+    <title>Switch-Html-Template</title>
+    <!-- Favicon and Apple Touch Icons -->
+    <link rel="icon" href="img/favicon.ico">
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="css/bootstrap-3.3.7.min.css">
+    <link rel="stylesheet" href="css/font-awesome-4.7.0.min.css">
+    <link rel="stylesheet" href="css/style-1.css">
+    <!-- Modernizr -->
+    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+</head>
+
+<body>
+    <header class="header-area">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="navigation">
+                        <div class="mobile-menu">
+                            <span class="menu-trigger">Menu</span>
+                        </div>
+                        <div class="main-menu">
+                            <div class="row">
+                               <div class="col-md-4">
+                                    <div class="left-menu">
+                                        <ul class="">
+                                            <li>
+                                                <a href="#">Home</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">What we do?</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Testimonial</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Contact Us</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                               </div>
+                                <div class="col-md-2 col-md-offset-1">
+                                    <div class="middle-logo">
+                                        <a href="#">
+                                            <h3>Switch</h3> 
+        <!--                                <img src="img/header-logo.png" alt=""> -->
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-2 col-md-offset-3">
+                                    <div class="right-search">
+                                        <form action="#">
+                                            <input type="search" placeholder="Search..."> 
+                                            <a href=""><i class="fa fa-search"></i></a> 
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            
+        </div>
+    </header>
+    <!-- Scripts -->
+    <script src="js/vendor/jquery-3.2.1.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+</body>
+
 </html>
