--- a/index.html
+++ b/index.html
@@ -30,50 +30,39 @@
                         <div class="mobile-menu">
                             <span class="menu-trigger">Menu</span>
                         </div>
-                        <div class="main-menu">
-                            <div class="row">
-                               <div class="col-md-4">
-                                    <div class="left-menu">
-                                        <ul class="">
-                                            <li>
-                                                <a href="#">Home</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">What we do?</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Testimonial</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Contact Us</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                               </div>
-                                <div class="col-md-2 col-md-offset-1">
-                                    <div class="middle-logo">
-                                        <a href="#">
-                                            <h3>Switch</h3> 
-        <!--                                <img src="img/header-logo.png" alt=""> -->
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-md-2 col-md-offset-3">
-                                    <div class="right-search">
-                                        <form action="#">
-                                            <input type="search" placeholder="Search..."> 
-                                            <a href=""><i class="fa fa-search"></i></a> 
-                                        </form>
-                                    </div>
-                                </div>
+                        <div class="main-menu flex">
+                            <div class="left-menu">
+                                <ul class="flex">
+                                    <li>
+                                        <a href="#">Home</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">What we do?</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Testimonial</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Contact Us</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="middle-logo">
+                                <a href="#">
+                                    <h3>Switch</h3> 
+<!--                                <img src="img/header-logo.png" alt=""> -->
+                                </a>
+                            </div>
+                            <div class="right-search">
+                                <form action="#">
+                                    <input type="search" placeholder="Search..."> 
+                                    <a href=""><i class="fa fa-search"></i></a> 
+                                </form>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            
         </div>
     </header>
     <!-- Scripts -->
