delete old code and create new code

--- a/index.html
+++ b/index.html
@@ -24,47 +24,28 @@
 <body>
     <header class="header-area">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="navigation">
-                        <div class="mobile-menu">
-                            <span class="menu-trigger">Menu</span>
-                        </div>
-                        <div class="main-menu flex">
-                            <div class="left-menu">
-                                <ul class="flex">
-                                    <li>
-                                        <a href="#">Home</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">What we do?</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Testimonial</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Contact Us</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="middle-logo">
-                                <a href="#">
-                                    <h3>Switch</h3> 
-<!--                                <img src="img/header-logo.png" alt=""> -->
-                                </a>
-                            </div>
-                            <div class="right-search">
-                                <form action="#">
-                                    <input type="search" placeholder="Search..."> 
-                                    <a href=""><i class="fa fa-search"></i></a> 
-                                </form>
-                            </div>
-                        </div>
+            <div class="navigation">
+                <div class="m-menu">
+                    <a class="nav-toggle" href="#">&#9776;</a>    <!--&#9776; is for 3bar-->
+                </div>
+                <div class="main-menu">
+                    <div class="left-menu">
+                        <ul class="flex">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">What We Do?</a></li>
+                            <li><a href="#">Testimonial</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
                     </div>
+                    <div class="center-logo">
+                        <a href="#"><h3>Switch</h3></a>
+                    </div>
+                    <div class="right-search"></div>
                 </div>
             </div>
         </div>
     </header>
+
     <!-- Scripts -->
     <script src="js/vendor/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
