--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <header class="header-area">
         <div class="container-fluid">
             <div class="navigation">
-                <div class="m-menu">
+                <div class="mob-menu">
                     <a class="nav-toggle" href="#">&#9776;</a>    <!--&#9776; is for 3bar-->
                 </div>
-                <div class="main-menu">
-                    <div class="left-menu">
+                <div class="main-menu flex">
+                    <div class="menu-left">
                         <ul class="flex">
                             <li><a href="#">Home</a></li>
                             <li><a href="#">What We Do?</a></li>
@@ -37,10 +37,15 @@
                             <li><a href="#">Contact Us</a></li>
                         </ul>
                     </div>
-                    <div class="center-logo">
+                    <div class="menu-center">
                         <a href="#"><h3>Switch</h3></a>
                     </div>
-                    <div class="right-search"></div>
+                    <div class="menu-right butn">
+                        <form action="#">
+                            <input type="search" placeholder="Search..."> 
+                            <a href=""><i class="fa fa-search"></i></a> 
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
