--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <title>Switch-Html-Template</title>
     <!-- Favicon and Apple Touch Icons -->
     <link rel="icon" href="img/favicon.ico">
+    <!-- Importing Fonts -->
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/bootstrap-3.3.7.min.css">
     <link rel="stylesheet" href="css/font-awesome-4.7.0.min.css">
