complete header & hero area

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="img/favicon.ico">
     <!-- Importing Fonts -->
     <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700" rel="stylesheet">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/bootstrap-3.3.7.min.css">
     <link rel="stylesheet" href="css/font-awesome-4.7.0.min.css">
@@ -43,8 +43,8 @@
                     <div class="menu-center">
                         <a href="#"><h3>Switch</h3></a>
                     </div>
-                    <div class="menu-right butn">
-                        <form action="#">
+                    <div class="menu-right">
+                        <form class="butn search-butn" action="#">
                             <input type="search" placeholder="Search..."> 
                             <a href=""><i class="fa fa-search"></i></a> 
                         </form>
@@ -53,6 +53,18 @@
             </div>
         </div>
     </header>
+    <section class="hero-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 hero-text flex">
+                    <h1>Art is Eternal Happiness</h1>
+                    <a href="#"><h3 class="butn wrk-wth-us-butn">WORK WITH US</h3></a>
+                    <a href="#"><h5 class="butn scrl-dwn-butn">scroll down
+<span><i class="fa fa-arrow-down"></i></span></h5></a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Scripts -->
     <script src="js/vendor/jquery-3.2.1.min.js"></script>
