styled what we do area

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             </div>
         </div>
     </header>
+    
     <section class="hero-area">
         <div class="container">
             <div class="row">
@@ -60,7 +61,95 @@
                     <h1>Art is Eternal Happiness</h1>
                     <a href="#"><h3 class="butn wrk-wth-us-butn">WORK WITH US</h3></a>
                     <a href="#"><h5 class="butn scrl-dwn-butn">scroll down
-<span><i class="fa fa-arrow-down"></i></span></h5></a>
+<span><i class="fa fa-arrow-down"></i></span></h5>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section class="wt-we-do-area section-padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <div class="section-title wt-we-do-title">
+                        <h4>WHAT WE DO</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet. Proin gravida nibh vel velitauctor aliquet.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row wt-we-do-item flex">
+                <div class="single-wt-we-do-item flex">
+                    <img src="img/single-wt-we-do-item-img-1.png" alt="">
+                    <h4>Lorem Ipsum</h4>
+                    <p> 
+                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh 
+                        vel velit auctor aliquet. Aenean sollicitudin, lorem quis 
+                        bibendum auctor,
+                    </p>
+                    <a class="butn lern-more-butn" href="#">Lern More</a>
+                </div>
+                <div class="single-wt-we-do-item flex">
+                    <img src="img/single-wt-we-do-item-img-1.png" alt="">
+                    <h4>Lorem Ipsum</h4>
+                    <p> 
+                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh 
+                        vel velit auctor aliquet. Aenean sollicitudin, lorem quis 
+                        bibendum auctor,
+                    </p>
+                    <a class="butn lern-more-butn" href="#">Lern More</a>
+                </div>
+                <div class="single-wt-we-do-item flex">
+                    <img src="img/single-wt-we-do-item-img-1.png" alt="">
+                    <h4>Lorem Ipsum</h4>
+                    <p> 
+                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh 
+                        vel velit auctor aliquet. Aenean sollicitudin, lorem quis 
+                        bibendum auctor,
+                    </p>
+                    <a class="butn lern-more-butn" href="#">Lern More</a>
+                </div>
+                <div class="single-wt-we-do-item flex">
+                    <img src="img/single-wt-we-do-item-img-1.png" alt="">
+                    <h4>Lorem Ipsum</h4>
+                    <p> 
+                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh 
+                        vel velit auctor aliquet. Aenean sollicitudin, lorem quis 
+                        bibendum auctor,
+                    </p>
+                    <a class="butn lern-more-butn" href="#">Lern More</a>
+                </div>
+                <div class="single-wt-we-do-item flex">
+                    <img src="img/single-wt-we-do-item-img-1.png" alt="">
+                    <h4>Lorem Ipsum</h4>
+                    <p> 
+                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh 
+                        vel velit auctor aliquet. Aenean sollicitudin, lorem quis 
+                        bibendum auctor,
+                    </p>
+                    <a class="butn lern-more-butn" href="#">Lern More</a>
+                </div>
+                <div class="single-wt-we-do-item flex">
+                    <img src="img/single-wt-we-do-item-img-1.png" alt="">
+                    <h4>Lorem Ipsum</h4>
+                    <p> 
+                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh 
+                        vel velit auctor aliquet. Aenean sollicitudin, lorem quis 
+                        bibendum auctor,
+                    </p>
+                    <a class="butn lern-more-butn" href="#">Lern More</a>
+                </div>
+                <div class="single-wt-we-do-item flex">
+                    <img src="img/single-wt-we-do-item-img-1.png" alt="">
+                    <h4>Lorem Ipsum</h4>
+                    <p> 
+                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh 
+                        vel velit auctor aliquet. Aenean sollicitudin, lorem quis 
+                        bibendum auctor,
+                    </p>
+                    <a class="butn lern-more-butn" href="#">Lern More</a>
                 </div>
             </div>
         </div>
