completed style in wt-we-do area using bootstrap col-md-4 class and  etc etc

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row wt-we-do-item flex">
-                <div class="single-wt-we-do-item flex">
+            <div class="row wt-we-do-item">
+                <div class="col-md-4 single-wt-we-do-item">
                     <img src="img/single-wt-we-do-item-img-1.png" alt="">
                     <h4>Lorem Ipsum</h4>
                     <p> 
@@ -91,8 +91,8 @@
                     </p>
                     <a class="butn lern-more-butn" href="#">Lern More</a>
                 </div>
-                <div class="single-wt-we-do-item flex">
-                    <img src="img/single-wt-we-do-item-img-1.png" alt="">
+                <div class="col-md-4 single-wt-we-do-item">
+                    <img src="img/single-wt-we-do-item-img-2.png" alt="">
                     <h4>Lorem Ipsum</h4>
                     <p> 
                         This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh 
@@ -101,48 +101,8 @@
                     </p>
                     <a class="butn lern-more-butn" href="#">Lern More</a>
                 </div>
-                <div class="single-wt-we-do-item flex">
-                    <img src="img/single-wt-we-do-item-img-1.png" alt="">
-                    <h4>Lorem Ipsum</h4>
-                    <p> 
-                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh 
-                        vel velit auctor aliquet. Aenean sollicitudin, lorem quis 
-                        bibendum auctor,
-                    </p>
-                    <a class="butn lern-more-butn" href="#">Lern More</a>
-                </div>
-                <div class="single-wt-we-do-item flex">
-                    <img src="img/single-wt-we-do-item-img-1.png" alt="">
-                    <h4>Lorem Ipsum</h4>
-                    <p> 
-                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh 
-                        vel velit auctor aliquet. Aenean sollicitudin, lorem quis 
-                        bibendum auctor,
-                    </p>
-                    <a class="butn lern-more-butn" href="#">Lern More</a>
-                </div>
-                <div class="single-wt-we-do-item flex">
-                    <img src="img/single-wt-we-do-item-img-1.png" alt="">
-                    <h4>Lorem Ipsum</h4>
-                    <p> 
-                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh 
-                        vel velit auctor aliquet. Aenean sollicitudin, lorem quis 
-                        bibendum auctor,
-                    </p>
-                    <a class="butn lern-more-butn" href="#">Lern More</a>
-                </div>
-                <div class="single-wt-we-do-item flex">
-                    <img src="img/single-wt-we-do-item-img-1.png" alt="">
-                    <h4>Lorem Ipsum</h4>
-                    <p> 
-                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh 
-                        vel velit auctor aliquet. Aenean sollicitudin, lorem quis 
-                        bibendum auctor,
-                    </p>
-                    <a class="butn lern-more-butn" href="#">Lern More</a>
-                </div>
-                <div class="single-wt-we-do-item flex">
-                    <img src="img/single-wt-we-do-item-img-1.png" alt="">
+                <div class="col-md-4 single-wt-we-do-item">
+                    <img src="img/single-wt-we-do-item-img-3.png" alt="">
                     <h4>Lorem Ipsum</h4>
                     <p> 
                         This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh 
