--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <header class="header-area">
         <div class="container-fluid">
             <div class="navigation">
-                <div class="mob-menu">
-                    <a class="nav-toggle" href="#">&#9776;</a>    <!--&#9776; is for 3bar-->
+                <div class="mob-menu"> <a class="nav-toggle" href="#">&#9776;</a>
+                    <!--&#9776; is for 3bar-->
                 </div>
                 <div class="main-menu flex">
                     <div class="menu-left">
@@ -40,84 +40,107 @@
                             <li><a href="#">Contact Us</a></li>
                         </ul>
                     </div>
-                    <div class="menu-center">
-                        <a href="#"><h3>Switch</h3></a>
-                    </div>
+                    <div class="menu-center"> <a href="#"><h3>Switch</h3></a> </div>
                     <div class="menu-right">
                         <form class="butn search-butn" action="#">
-                            <input type="search" placeholder="Search..."> 
-                            <a href=""><i class="fa fa-search"></i></a> 
-                        </form>
+                            <input type="search" placeholder="Search..."> <a href=""><i class="fa fa-search"></i></a> </form>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-    
     <section class="hero-area">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 hero-text flex">
-                    <h1>Art is Eternal Happiness</h1>
-                    <a href="#"><h3 class="butn wrk-wth-us-butn">WORK WITH US</h3></a>
-                    <a href="#"><h5 class="butn scrl-dwn-butn">scroll down
+                    <h1>Art is Eternal Happiness</h1> <a href="#"><h3 class="butn wrk-wth-us-butn">WORK WITH US</h3></a> <a href="#"><h5 class="butn scrl-dwn-butn">scroll down
 <span><i class="fa fa-arrow-down"></i></span></h5>
-                    </a>
-                </div>
+                    </a> </div>
             </div>
         </div>
     </section>
-    
     <section class="wt-we-do-area section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
                     <div class="section-title wt-we-do-title">
                         <h4>WHAT WE DO</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet. Proin gravida nibh vel velitauctor aliquet.
-                        </p>
+                        <p> Lorem ipsum dolor sit amet. Proin gravida nibh vel velitauctor aliquet. </p>
                     </div>
                 </div>
             </div>
             <div class="row wt-we-do-item">
-                <div class="col-md-4 single-wt-we-do-item">
-                    <img src="img/single-wt-we-do-item-img-1.png" alt="">
+                <div class="col-md-4 single-wt-we-do-item"> <img src="img/single-wt-we-do-item-img-1.png" alt="">
                     <h4>Lorem Ipsum</h4>
-                    <p> 
-                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh 
-                        vel velit auctor aliquet. Aenean sollicitudin, lorem quis 
-                        bibendum auctor,
-                    </p>
-                    <a class="butn lern-more-butn" href="#">Lern More</a>
-                </div>
-                <div class="col-md-4 single-wt-we-do-item">
-                    <img src="img/single-wt-we-do-item-img-2.png" alt="">
+                    <p> This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, </p> <a class="butn lern-more-butn" href="#">Lern More</a> </div>
+                <div class="col-md-4 single-wt-we-do-item"> <img src="img/single-wt-we-do-item-img-2.png" alt="">
                     <h4>Lorem Ipsum</h4>
-                    <p> 
-                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh 
-                        vel velit auctor aliquet. Aenean sollicitudin, lorem quis 
-                        bibendum auctor,
-                    </p>
-                    <a class="butn lern-more-butn" href="#">Lern More</a>
-                </div>
-                <div class="col-md-4 single-wt-we-do-item">
-                    <img src="img/single-wt-we-do-item-img-3.png" alt="">
+                    <p> This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, </p> <a class="butn lern-more-butn" href="#">Lern More</a> </div>
+                <div class="col-md-4 single-wt-we-do-item"> <img src="img/single-wt-we-do-item-img-3.png" alt="">
                     <h4>Lorem Ipsum</h4>
-                    <p> 
-                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh 
-                        vel velit auctor aliquet. Aenean sollicitudin, lorem quis 
-                        bibendum auctor,
-                    </p>
-                    <a class="butn lern-more-butn" href="#">Lern More</a>
-                </div>
+                    <p> This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, </p> <a class="butn lern-more-butn" href="#">Lern More</a> </div>
             </div>
         </div>
     </section>
-
+    <section class="our-lt-wrk-area section-padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <div class="section-title our-lt-wrk-title">
+                        <h4>OUR LATEST WORK</h4>
+                        <p> Lorem ipsum dolor sit amet. Proin gravida nibh vel velitauctor aliquet. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-10 col-md-offset-1">
+                    <div class="button-group our-lt-wrk-filter-butn-group">
+                        <button class="button is-checked" data-filter="*">Photography</button>
+                        <button class="button" data-filter=".design">Design</button>
+                        <button class="button" data-filter=".print">Print</button>
+                    </div>
+                    <div class="grid our-lt-wrk-grid">
+                        <div class="our-lt-wrk-img grid-item design"> 
+                            <img src="img/our-lt-wrk-img-1.jpg" alt=""> 
+                        </div>
+                        <div class="our-lt-wrk-img grid-item print"> 
+                            <img src="img/our-lt-wrk-img-2.jpg" alt=""> 
+                        </div>
+                        <div class="our-lt-wrk-img grid-item design"> 
+                            <img src="img/our-lt-wrk-img-3.jpg" alt=""> 
+                        </div>
+                        <div class="our-lt-wrk-img grid-item print"> 
+                            <img src="img/our-lt-wrk-img-4.jpg" alt=""> 
+                        </div>
+                        <div class="our-lt-wrk-img grid-item design"> 
+                            <img src="img/our-lt-wrk-img-5.jpg" alt=""> 
+                        </div>
+                        <div class="our-lt-wrk-img grid-item design"> 
+                            <img src="img/our-lt-wrk-img-6.jpg" alt=""> 
+                        </div>
+                        <div class="our-lt-wrk-img grid-item design"> 
+                            <img src="img/our-lt-wrk-img-7.jpg" alt=""> 
+                        </div>
+                        <div class="our-lt-wrk-img grid-item print"> 
+                            <img src="img/our-lt-wrk-img-8.jpg" alt=""> 
+                        </div>
+                        <div class="our-lt-wrk-img grid-item print"> 
+                            <img src="img/our-lt-wrk-img-9.jpg" alt=""> 
+                        </div>
+                        <div class="our-lt-wrk-img grid-item print"> 
+                            <img src="img/our-lt-wrk-img-10.jpg" alt=""> 
+                        </div>
+                    </div> 
+                    <a href="#" class="butn vw-more-wrk-butn">View more work <span><i class="fa fa-arrow-right"></i></span>
+                    </a> </div>
+            </div>
+        </div>
+    </section>
     <!-- Scripts -->
     <script src="js/vendor/jquery-3.2.1.min.js"></script>
-    <script src="js/plugins.js"></script>
+    <script src="js/bootstrap-3.3.7.min.js"></script>
+    <script src="js/isotope.pkgd.min-3.0.4.js"></script>
+    <script src="js/imagesloaded.pkgd.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
