70% our happy client area completed

--- a/index.html
+++ b/index.html
@@ -317,6 +317,68 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-2 col-md-offset-1 meet-the-tm-item flex">
+                    <div class="meet-the-tm-img">
+                        <img src="img/meet-the-tm-img/meet-the-tm-img-1.png" alt="">
+                    </div>
+                    <span></span>
+                    <h4>Krisna Wijaya</h4>
+                    <div class="butn meet-the-tm-butn flex">
+                        <a href="#"><i class="fa fa-dribbble flex"></i></a>
+                        <a href="#"><i class="fa fa-behance flex"></i></a>
+                        <a href="#"><i class="fa fa-twitter flex"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-2 meet-the-tm-item flex">
+                    <div class="meet-the-tm-img">
+                        <img src="img/meet-the-tm-img/meet-the-tm-img-2.png" alt="">
+                    </div>
+                    <span></span>
+                    <h4>Gabriel Yoshua</h4>
+                    <div class="butn meet-the-tm-butn flex">
+                        <a href="#"><i class="fa fa-dribbble flex"></i></a>
+                        <a href="#"><i class="fa fa-behance flex"></i></a>
+                        <a href="#"><i class="fa fa-twitter flex"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-2 meet-the-tm-item flex">
+                    <div class="meet-the-tm-img">
+                        <img src="img/meet-the-tm-img/meet-the-tm-img-3.png" alt="">
+                    </div>
+                    <span></span>
+                    <h4>Adik N.K.L</h4>
+                    <div class="butn meet-the-tm-butn flex">
+                        <a href="#"><i class="fa fa-dribbble flex"></i></a>
+                        <a href="#"><i class="fa fa-behance flex"></i></a>
+                        <a href="#"><i class="fa fa-twitter flex"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-2 meet-the-tm-item flex">
+                    <div class="meet-the-tm-img">
+                        <img src="img/meet-the-tm-img/meet-the-tm-img-4.png" alt="">
+                    </div>
+                    <span></span>
+                    <h4>Zan D.J</h4>
+                    <div class="butn meet-the-tm-butn flex">
+                        <a href="#"><i class="fa fa-dribbble flex"></i></a>
+                        <a href="#"><i class="fa fa-behance flex"></i></a>
+                        <a href="#"><i class="fa fa-twitter flex"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-2 meet-the-tm-item flex">
+                    <div class="meet-the-tm-img">
+                        <img src="img/meet-the-tm-img/meet-the-tm-img-5.png" alt="">
+                    </div>
+                    <span></span>
+                    <h4>Faizal Febri</h4>
+                    <div class="butn meet-the-tm-butn flex">
+                        <a href="#"><i class="fa fa-dribbble flex"></i></a>
+                        <a href="#"><i class="fa fa-behance flex"></i></a>
+                        <a href="#"><i class="fa fa-twitter flex"></i></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!--End Meet The Team Area-->
