todays work on footer section

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 footer-column">
-                    <div class="section-title footer-left-title">
+                    <div class="section-title footer-left-title flex">
                         <h4>ABOUT US</h4>
                         <p> This is Photoshop's version  of Lorem Ipsum. Proin 
                             gravida nibh vel velit auctor aliquet. Aenean sollicitudin, 
@@ -439,7 +439,7 @@
                             </div>
                             <div class="footer-center-post-info flex">
                                 <p>Lorem Ipsum Dolor Sit Amet.</p>
-                                <a class="butn footer-center-post-butn fcp-butn-1" href="#">MAGAZINE</a>
+                                <a class="butn footer-center-post-butn fcp-butn-2" href="#">MAGAZINE</a>
                             </div>
                         </div>
                         <div class="footer-center-post flex">
@@ -448,7 +448,7 @@
                             </div>
                             <div class="footer-center-post-info flex">
                                 <p>Lorem Ipsum Dolor Sit Amet.</p>
-                                <a class="butn footer-center-post-butn fcp-butn-1" href="#">MAGAZINE</a>
+                                <a class="butn footer-center-post-butn fcp-butn-3" href="#">MAGAZINE</a>
                             </div>
                         </div>
                         <div class="footer-center-post flex">
@@ -457,7 +457,7 @@
                             </div>
                             <div class="footer-center-post-info flex">
                                 <p>Lorem Ipsum Dolor Sit Amet.</p>
-                                <a class="butn footer-center-post-butn fcp-butn-1" href="#">MAGAZINE</a>
+                                <a class="butn footer-center-post-butn fcp-butn-4" href="#">MAGAZINE</a>
                             </div>
                         </div>
                         <div class="footer-center-post flex">
@@ -466,7 +466,7 @@
                             </div>
                             <div class="footer-center-post-info flex">
                                 <p>Lorem Ipsum Dolor Sit Amet.</p>
-                                <a class="butn footer-center-post-butn fcp-butn-1" href="#">MAGAZINE</a>
+                                <a class="butn footer-center-post-butn fcp-butn-5" href="#">MAGAZINE</a>
                             </div>
                         </div>
                     </div>
@@ -476,15 +476,15 @@
                         <h4>CONTACT US</h4>
                         <p> 10044 West 23th Street, Suite 721 <br>
                             New York NY 10010 <br>
-                            Email: Username@email.com <br>
-                            Phone: +1 (0) 123 4567 890 <br>
-                            Fax: +1 (0) 321 4567 890 <br>
+                            Email: <a href="mailto:username@email.com" >Username@email.com</a> <br>
+                            Phone: <a href="tel:1 (0) 123 4567 890" >+1 (0) 123 4567 890</a> <br>
+                            Fax: <a href="fax:+1 (0) 321 4567 890">+1 (0) 321 4567 890</a> <br>
                         </p>
                         <form class="footer-contact-form" action="email.php" method="post" data-toggle="validator">
                             <input type="text" name="name" placeholder="Your Name.." required="">
                             <input type="email" name="email" placeholder="Your Email.." required="">
                             <textarea name="message" rows="1" placeholder="Your Mesage.." required=""></textarea>
-                            <button class="butn " type="submit">Send</button>
+                            <input class="butn" type="submit" value="Send">
                         </form>
                     </div>
                 </div>
