cheking completed of header area font-size and font-family color etc..

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                     <div class="menu-center"> <a href="#"><h3>Switch</h3></a> </div>
                     <div class="menu-right">
                         <form class="butn search-butn" action="#">
-                            <input type="search" placeholder="Search..."> <a href=""><i class="fa fa-search"></i></a> </form>
+                            <input type="search" placeholder="Search...">
+                            <button type="button"><i class="fa fa-search"></i></button>
+                        </form>
                     </div>
                 </div>
             </div>
