completed css work with what we do area

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
             <div class="row wt-we-do-item">
                 <div class="col-md-4 single-wt-we-do-item"> <img src="img/single-wt-we-do-item-img-1.png" alt="">
                     <h4>Lorem Ipsum</h4>
-                    <p> This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, </p> <a class="butn lern-more-butn" href="#">Lern More</a> </div>
+                    <p> This is Photoshop's version of Lorem <br> Ipsum. Proin gravida nibh vel <br> velit auctor aliquet. Aenean sollicitudin, <br> lorem quis bibendum auctor, </p> <a class="butn lern-more-butn" href="#">Lern More</a> </div>
                 <div class="col-md-4 single-wt-we-do-item"> <img src="img/single-wt-we-do-item-img-2.png" alt="">
                     <h4>Lorem Ipsum</h4>
-                    <p> This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, </p> <a class="butn lern-more-butn" href="#">Lern More</a> </div>
+                    <p> This is Photoshop's version of Lorem <br> Ipsum. Proin gravida nibh vel <br> velit auctor aliquet. Aenean sollicitudin, <br> lorem quis bibendum auctor, </p> <a class="butn lern-more-butn" href="#">Lern More</a> </div>
                 <div class="col-md-4 single-wt-we-do-item"> <img src="img/single-wt-we-do-item-img-3.png" alt="">
                     <h4>Lorem Ipsum</h4>
-                    <p> This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, </p> <a class="butn lern-more-butn" href="#">Lern More</a> </div>
+                    <p> This is Photoshop's version of Lorem <br> Ipsum. Proin gravida nibh vel <br> velit auctor aliquet. Aenean sollicitudin, <br> lorem quis bibendum auctor, </p> <a class="butn lern-more-butn" href="#">Lern More</a> </div>
             </div>
         </div>
     </section>
