completed footer area font famly, size and others css cheking

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700" rel="stylesheet">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/bootstrap-3.3.7.min.css">
     <link rel="stylesheet" href="css/font-awesome-4.7.0.min.css">
+    <link rel="stylesheet" href="css/bootstrap-3.3.7.min.css">
     <link rel="stylesheet" href="css/style-1.css">
     <!-- Modernizr -->
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
@@ -401,15 +401,16 @@
                 <div class="col-md-4 footer-column">
                     <div class="section-title footer-left-title flex">
                         <h4>ABOUT US</h4>
-                        <p> This is Photoshop's version  of Lorem Ipsum. Proin 
-                            gravida nibh vel velit auctor aliquet. Aenean sollicitudin, 
-                            lorem quis bibendum auctor, nisi elit consequat ipsum, nec 
-                            sagittis sem nibh id elit. Duis sed odio sit amet nibh 
-                            vulputate cursus a sit amet mauris. Morbi accumsan ipsum 
-                            velit. Ut aliquam massa nisl quis neque. Suspendisse in 
-                            orci enim.Aenean sollicitudin, lorem quis bibendum auctor, 
-                            nisi elit consequat ipsum, nec sagittis sem nibh id elit. 
-                            Duis sed odio sit amet nibh vulputate cursus.
+                        <p> This is Photoshop's version  of Lorem <br> Ipsum. Proin 
+                            gravida nibh vel velit auctor <br> aliquet. Aenean 
+                            sollicitudin, lorem quis <br> bibendum auctor, nisi elit 
+                            consequat ipsum, <br> nec sagittis sem nibh id elit. Duis 
+                            sed odio sit <br> amet nibh  vulputate cursus a sit amet 
+                            mauris. <br> Morbi accumsan ipsum  velit. Ut aliquam <br> 
+                            massa nisl quis neque. Suspendisse in  orci <br>enim.Aenean 
+                            sollicitudin, lorem quis biben- <br>dum auctor,  nisi elit 
+                            consequat ipsum, nec <br> sagittis sem nibh id elit. 
+                            Duis sed odio sit <br> amet nibh vulputate cursus.
                         </p>
                         <div class="butn meet-the-tm-butn footer-left-butn flex">
                             <a href="#"><i class="fa fa-dribbble flex"></i></a>
@@ -436,7 +437,7 @@
                             </div>
                             <div class="footer-center-post-info flex">
                                 <p>Lorem Ipsum Dolor Sit Amet.</p>
-                                <a class="butn footer-center-post-butn fcp-butn-2" href="#">MAGAZINE</a>
+                                <a class="butn footer-center-post-butn fcp-butn-2" href="#">UI DESIGN</a>
                             </div>
                         </div>
                         <div class="footer-center-post flex">
@@ -445,7 +446,7 @@
                             </div>
                             <div class="footer-center-post-info flex">
                                 <p>Lorem Ipsum Dolor Sit Amet.</p>
-                                <a class="butn footer-center-post-butn fcp-butn-3" href="#">MAGAZINE</a>
+                                <a class="butn footer-center-post-butn fcp-butn-3" href="#">PHOTOGRAPHY</a>
                             </div>
                         </div>
                         <div class="footer-center-post flex">
@@ -454,7 +455,7 @@
                             </div>
                             <div class="footer-center-post-info flex">
                                 <p>Lorem Ipsum Dolor Sit Amet.</p>
-                                <a class="butn footer-center-post-butn fcp-butn-4" href="#">MAGAZINE</a>
+                                <a class="butn footer-center-post-butn fcp-butn-4" href="#">BOOK</a>
                             </div>
                         </div>
                         <div class="footer-center-post flex">
@@ -463,7 +464,7 @@
                             </div>
                             <div class="footer-center-post-info flex">
                                 <p>Lorem Ipsum Dolor Sit Amet.</p>
-                                <a class="butn footer-center-post-butn fcp-butn-5" href="#">MAGAZINE</a>
+                                <a class="butn footer-center-post-butn fcp-butn-5" href="#">UI DESIGN</a>
                             </div>
                         </div>
                     </div>
